--- a/act4_resume/educ.html
+++ b/act4_resume/educ.html
@@ -20,7 +20,7 @@
 <div class="main"> 
 		<h1>Education</h1>
 		<br><br>
-			<h2>Schools/Univeristy</h2>
+			<h2>Schools/University</h2>
 			<ul>
 				<p><b>Pre-School:</b> Shekinah Christian Academy of Bustos Bulacan</p>
 				<p><b>Elementary:</b> St Joseph School of Baliuag</p>
