--- a/act4_resume/seminar.html
+++ b/act4_resume/seminar.html
@@ -30,13 +30,12 @@
 				<p><b>Title of the Event: </b>Online Story Telling</p>
 				<p><b>Sponsoring Agency: </b>Sambalaran</p>
 				<p><b>Date of the Event:</b>November 09, 2020</p>
-				<p><b>Certificate of the Event: </b> </p>
-				<p><b>Images:</b></p>
+				<p><b>Images and Certificate of the Event: </b> </p>
 			</ul>
 				<table>
 					<tr>
-						<td><img src="ss.png" alt = "screenshot"></td>
-						<td><img src="ss2.png" alt = "screenshot"></td>
+						<td><img src="1_ss.png" alt = "screenshot"></td>
+						<td><img src="1_ss2.png" alt = "screenshot"></td>
 					</tr>
 					
 				</table>
@@ -47,13 +46,12 @@
 				<p><b>Title of the Event: </b>G-Suite Applications (Drive, Classroom & Forms)</p>
 				<p><b>Sponsoring Agency: </b>Sambalaran</p>
 				<p><b>Date of the Event:</b>November 09, 2020</p>
-				<p><b>Certificate of the Event: </b> </p>
-				<p><b>Images:</b></p>
+				<p><b>Images and Certificate of the Event: </b> </p>				
 			</ul>
 				<table>
 					<tr>
 						<td><img src="2_ss.png" alt = "screenshot"></td>
-						<td><img src="ss2.png" alt = "screenshot"></td>
+						<td><img src="2_ss2.png" alt = "screenshot"></td>
 					</tr>
 				</table>
 
